+++++++++++
Python News
+++++++++++

What's New in Python 2.7.14?
============================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

- bpo-29347: Fixed possibly dereferencing undefined pointers
  when creating weakref objects.

- Issue #14376: Allow sys.exit to accept longs as well as ints. Patch
  by Gareth Rees.

- Issue #29028: Fixed possible use-after-free bugs in the subscription of the
  buffer object with custom index object.

- Issue #29145: Fix overflow checks in string, bytearray and unicode.
  Patch by jan matejek and Xiang Zhang.

- Issue #28932: Do not include <sys/random.h> if it does not exist.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- Issue #29354: Fixed inspect.getargs() for parameters which are cell
  variables.

- Issue #29335: Fix subprocess.Popen.wait() when the child process has
  exited to a stopped instead of terminated state (ex: when under ptrace).

- Issue #29219: Fixed infinite recursion in the repr of uninitialized
  ctypes.CDLL instances.

- Issue #29082: Fixed loading libraries in ctypes by unicode names on Windows.
  Original patch by Chi Hsuan Yen.

- Issue #29188: Support glibc 2.24 on Linux: don't use getentropy() function
  but read from /dev/urandom to get random bytes, for example in os.urandom().
  On Linux, getentropy() is implemented which getrandom() is blocking mode,
  whereas os.urandom() should not block.

- Issue #29142: In urllib, suffixes in no_proxy environment variable with
  leading dots could match related hostnames again (e.g. .b.c matches a.b.c).
  Patch by Milan Oberkirch.

- Issue #29094: Offsets in a ZIP file created with extern file object and mode
  "w" now are relative to the start of the file.

- Issue #13051: Fixed recursion errors in large or resized
  curses.textpad.Textbox.  Based on patch by Tycho Andersen.

- Issue #9770: curses.ascii predicates now work correctly with negative
  integers.
